--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "classnames": "^2.2.6",
     "color": "^3.1.2",
     "date-fns": "^2.9.0",
     "immer": "^5.3.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "redux-dogma": "^0.2.2",
-    "redux-saga": "^1.1.3"
+    "redux-dogma": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
